@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-12T08:19:33Z",
-  "count_outdated" : 464,
-  "uniques_outdated" : 216,
-  "count" : 473,
+  "timestamp" : "2023-08-12T16:20:19Z",
+  "count_outdated" : 466,
+  "uniques_outdated" : 217,
+  "count" : 474,
   "uniques" : 222,
   "clones" : [
-    {
-      "timestamp": "2023-07-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-30T00:00:00Z",
       "count": 2,
@@ -52,9 +43,9 @@
     },
     {
       "timestamp": "2023-08-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
